--- a/Java8Lambdas/pom.xml
+++ b/Java8Lambdas/pom.xml
@@ -73,5 +73,10 @@
         <artifactId>hamcrest-all</artifactId>
         <version>1.3</version>
     </dependency>
+    <dependency>
+        <groupId>org.openjdk.jmh</groupId>
+        <artifactId>jmh-core</artifactId>
+        <version>0.5.3</version>
+    </dependency>
   </dependencies>
 </project>
